--- a/spring-boot-backend/.gitignore
+++ b/spring-boot-backend/.gitignore
@@ -14,11 +14,11 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
-/.idea
+ 
 
 ### NetBeans ###
 /nbproject/private/
