--- a/spring-boot-backend/src/main/resources/application.properties
+++ b/spring-boot-backend/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
 spring.data.rest.base-path=/api
